--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('path-to-your-background-image.jpg'); /* Replace with your image */
+    background-image: url('background.jpeg'); /* Replace with your image */
     background-size: cover;
     background-position: center;
   }
@@ -24,13 +24,13 @@
   }
   
   .brand-name {
-    font-size: 50px;
+    font-size: 100px;
     color: #A52A2A; /* Deep brown */
   }
   
   .tagline {
     font-size: 24px;
-    color: #D2691E; /* Cinnamon color */
+    color: #5b370f; /* Cinnamon color */
     margin-top: 10px;
   }
   
